@@ -1,14 +1,0 @@
-#include "spvm_native.h"
-
-
-
-static const char* FILE_NAME = "Sys/Socket/AddrinfoLinkList.c";
-
-int32_t SPVM__Sys__Socket__AddrinfoLinkList__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
-  (void)env;
-  (void)stack;
-  
-  return 0;
-}
-
-
