@@ -1,3 +1,0 @@
-class Sys::Socket::AddrinfoLinkList {
-
-}
