@@ -1,0 +1,4 @@
+class Sys::Socket::AddrinfoLinkedList {
+  use Sys::Socket::Addrinfo;
+  native method to_array : Sys::Socket::Addrinfo[] ();
+}
